Dodan seznam na main activity